--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nest-kafka",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "layors4978@gmail.com",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -12,6 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "docker:dev": "docker-compose -f ./docker-compose.yml -p nest-kafka up --build",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
