--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,11 @@ services:
       CLUSTER_ID: 2tznpsS6SOG0LgAANBeE7Q
       KAFKA_NODE_ID: 1
       KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_INTER_BROKER_LISTENER_NAME: BROKER
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: BROKER:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
-      KAFKA_LISTENERS: BROKER://kafka-1:19092,CONTROLLER://kafka-1:29092,EXTERNAL://localhost:9092
-      KAFKA_ADVERTISED_LISTENERS: BROKER://kafka-1:19092,EXTERNAL://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_LISTENERS: INTERNAL://kafka-1:19092,CONTROLLER://kafka-1:29092,EXTERNAL://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-1:19092,EXTERNAL://localhost:9092
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka-1:29092,2@kafka-2:29093,3@kafka-3:29094
     ports:
       - 9092:9092
@@ -34,11 +34,11 @@ services:
       CLUSTER_ID: 2tznpsS6SOG0LgAANBeE7Q
       KAFKA_NODE_ID: 2
       KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_INTER_BROKER_LISTENER_NAME: BROKER
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: BROKER:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
-      KAFKA_LISTENERS: BROKER://kafka-2:19093,CONTROLLER://kafka-2:29093,EXTERNAL://localhost:9093
-      KAFKA_ADVERTISED_LISTENERS: BROKER://kafka-2:19093,EXTERNAL://localhost:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_LISTENERS: INTERNAL://kafka-2:19093,CONTROLLER://kafka-2:29093,EXTERNAL://localhost:9093
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-2:19093,EXTERNAL://localhost:9093
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka-1:29092,2@kafka-2:29093,3@kafka-3:29094
     ports:
       - 9093:9093
@@ -54,11 +54,11 @@ services:
       CLUSTER_ID: 2tznpsS6SOG0LgAANBeE7Q
       KAFKA_NODE_ID: 3
       KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_INTER_BROKER_LISTENER_NAME: BROKER
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: BROKER:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
-      KAFKA_LISTENERS: BROKER://kafka-3:19094,CONTROLLER://kafka-3:29094,EXTERNAL://localhost:9094
-      KAFKA_ADVERTISED_LISTENERS: BROKER://kafka-3:19094,EXTERNAL://localhost:9094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_LISTENERS: INTERNAL://kafka-3:19094,CONTROLLER://kafka-3:29094,EXTERNAL://localhost:9094
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-3:19094,EXTERNAL://localhost:9094
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka-1:29092,2@kafka-2:29093,3@kafka-3:29094
     ports:
       - 9094:9094
