--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,20 @@ volumes:
   kafka-3-secret:
 
 services:
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui:v0.7.1
+    ports:
+      - 8080:8080
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-1:19092,kafka-2:19093,kafka-3:19094
+      DYNAMIC_CONFIG_ENABLED: 'true'
+
   kafka-1:
     image: confluentinc/cp-kafka:7.5.3
     environment:
