--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
-      KAFKA_LISTENERS: INTERNAL://kafka-1:19092,CONTROLLER://kafka-1:29092,EXTERNAL://localhost:9092
+      KAFKA_LISTENERS: INTERNAL://kafka-1:19092,CONTROLLER://kafka-1:29092,EXTERNAL://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-1:19092,EXTERNAL://localhost:9092
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka-1:29092,2@kafka-2:29093,3@kafka-3:29094
     ports:
@@ -51,7 +51,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
-      KAFKA_LISTENERS: INTERNAL://kafka-2:19093,CONTROLLER://kafka-2:29093,EXTERNAL://localhost:9093
+      KAFKA_LISTENERS: INTERNAL://kafka-2:19093,CONTROLLER://kafka-2:29093,EXTERNAL://0.0.0.0:9093
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-2:19093,EXTERNAL://localhost:9093
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka-1:29092,2@kafka-2:29093,3@kafka-3:29094
     ports:
@@ -71,7 +71,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
-      KAFKA_LISTENERS: INTERNAL://kafka-3:19094,CONTROLLER://kafka-3:29094,EXTERNAL://localhost:9094
+      KAFKA_LISTENERS: INTERNAL://kafka-3:19094,CONTROLLER://kafka-3:29094,EXTERNAL://0.0.0.0:9094
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-3:19094,EXTERNAL://localhost:9094
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka-1:29092,2@kafka-2:29093,3@kafka-3:29094
     ports:
